[update]approver limited

--- a/templates/approve/approve_list.html
+++ b/templates/approve/approve_list.html
@@ -132,7 +132,7 @@
                                 <div class="ibox-content">
                                     <div class="text-center">
                                         <h3>审批通过</h3>
-                                        <p class="small"><i class="fa fa-check-square-o"></i> 审批通过，待发布</p>
+                                        <p class="small"><i class="fa fa-check-square-o"></i> 审批通过</p>
                                     </div>
 
                                     <ul class="sortable-list connectList agile-list ui-sortable" id="approve_passed">
