--- a/templates/restartMautic.html
+++ b/templates/restartMautic.html
@@ -12,9 +12,9 @@
         <label for="host">区域</label>
         <select class="selectpicker form-control" data-live-search="true" id="host" name="host"  onchange="getoption(this.value)">
             <option></option>
-            <option value="p-aws2-sg-mautic-2">sg</option>
-            <option value="p-aws2-sg-mautic-1">my</option>
-            <option value="p-aws2-sg-mautic-3">th</option>
+            <option value="p-aws-sg-mautic-sg">sg</option>
+            <option value="p-aws-sg-mautic-my">my</option>
+            <option value="p-aws-sg-mautic-th">th</option>
         </select>
      </fieldset>
 
